--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,7 +13,8 @@
     "react-hash-link": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.1.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
