--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hash-link": "^1.0.0",
+    "react-mailto": "^0.4.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.1.0",
     "react-scripts": "3.4.3",
